<resources>
    <string name="app_name">CoconutPlus</string>
    <string name="title">Coconut Plus</string>
    <string name="sin">Sing Up</string>
    <string name="cc">Coconut Counting</string>
    <string name="l">Log in</string>
    <string name="enter_the_user_name">Enter the User Name</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="ok">Ok</string>
    <string name="successfully">Successfully</string>
    <string name="sign_up">Sign Up</string>
    <string name="successfully1">Successfully</string>
    <string name="added">Added</string>
    <string name="coconut_count">Coconut Count</string>
    <string name="tree_number">Tree Number</string>
    <string name="date">Date</string>
    <string name="welcome_to">Welcome to</string>
    <string name="coconut_plus">Coconut Plus!</string>
    <string name="coconut_counter">Coconut Counter</string>
    <string name="manage_you_r_estates">Manage You\'r Estates</string>
    <string name="get_start_with_your">Get Start With Your</string>
    <string name="coconut_plus_journey">Coconut Plus Journey</string>
    <string name="now">Now....</string>
    <string name="next">Next</string>
    <string name="enhance_your">Enhance your</string>
    <string name="plantation">Plantation</string>
    <string name="productivity_with">Productivity With</string>
    <string name="coconut_plus1">Coconut Plus</string>
    <string name="first_name">First Name</string>
    <string name="enter_the_last_name">Enter the Last Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_the_last_name1">Enter the Last Name</string>
    <string name="email">Email</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_the_contact_number">Enter the Contact Number</string>
    <string name="password">Password</string>
    <string name="enter_the_password1">Enter the Password</string>
    <string name="my_profile">My Profile</string>
    <string name="hi_there">Hi there</string>
    <string name="name">Name</string>
    <string name="email1">Email</string>
    <string name="c_number">C-Number</string>
    <string name="save">Save</string>
    <string name="channge_password">Channge Password</string>
    <string name="log_out">Log Out</string>
    <string name="report_and_analysis">Report and Analysis</string>
    <string name="of_your_estates">of Your Estates</string>
    <string name="total_coconut">Total Coconut</string>
    <string name="harvest">Harvest</string>
    <string name="financial">Financial</string>
    <string name="report">Report</string>
    <string name="estate_wise">Estate Wise</string>
    <string name="report1">Report</string>
</resources>
