<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#FFFF"
    tools:context=".Profile">

    <ImageButton
        android:id="@+id/btn_back_h"
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:layout_marginRight="320dp"
        android:background="@android:color/transparent"
        android:contentDescription="back"
        app:srcCompat="@drawable/arrow_circle_left" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:textAlignment="center"
        android:textColor="#393939"
        android:textSize="43sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        app:srcCompat="@drawable/account_circle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="248dp"
            android:layout_height="match_parent"
            android:text="@string/hi_there"
            android:textAlignment="center"
            android:textColor="#393939"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"

            android:text="" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="426dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/btn_cover2" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="85dp"
            android:layout_marginBottom="50dp"
            android:text="@string/name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/textView33"
                android:layout_width="241dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:text="Wilson"
                android:textSize="14sp" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="426dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/btn_cover2" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="85dp"
            android:layout_marginBottom="50dp"
            android:text="@string/email1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/textView36"
                android:layout_width="241dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:text="Wilson@.com"
                android:textSize="14sp" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="426dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/btn_cover2" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="85dp"
            android:layout_marginBottom="50dp"
            android:text="@string/c_number"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/textView38"
                android:layout_width="241dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:text="0812879389"
                android:textSize="14sp" />

        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mygreen"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_change_pword"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mygreen"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/channge_password" />

    <Button
        android:id="@+id/btn_lout"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mygreen"
        android:layout_gravity="center"
        android:text="@string/log_out" />


</LinearLayout>