<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CaddSucces">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="798dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <!-- Background Image -->
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="379dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="17dp"
            app:srcCompat="@drawable/success_box" />

        <!-- Overlay Text Layout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="656dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="377dp"
                android:layout_height="89dp"
                android:layout_marginTop="148dp"
                app:srcCompat="@drawable/success" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/successfully1"
                android:textColor="@android:color/black"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/added"
                android:textColor="@android:color/black"
                android:textSize="50sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_addok"
                android:layout_width="121dp"
                android:layout_height="62dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#336E1B"
                android:text="@string/ok"
                android:textSize="20sp" />


        </LinearLayout>

    </FrameLayout>


        <ImageView
            android:id="@+id/imageView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/under" />

</LinearLayout>

